fix: Single store page cover image overlaped for longer heigh image

--- a/assets/src/less/store.less
+++ b/assets/src/less/store.less
@@ -1085,6 +1085,8 @@
                 }
 
                 &.profile-layout-default {
+                    overflow: hidden;
+
                     img.profile-info-img {
                         position: absolute;
                         top: 0;
